--- a/Back-End/.env
+++ b/Back-End/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://swotso3omhg4u5cun047:pscale_pw_BG9p5hYHX1MQWE9pHN1TByQkhsrSpEvhUkkcU74pfEg@aws.connect.psdb.cloud/smart-security-database?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://pwefrn1m57gzy3nvu4zu:pscale_pw_37PYQi75EJF492Kx2E2W9gIOZ87P0rhBP0EpJSdwD4r@aws.connect.psdb.cloud/smart-security-database?ssl={"rejectUnauthorized":true}'
